--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/styles": "^5.12.3",
     "@react-spring/web": "^9.7.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
