--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-REACT_APP_SERVER_URL = http://3.34.52.202:8081
+# REACT_APP_SERVER_URL = http://3.34.52.202:8081
 
+# REACT_APP_CLIENT_URL = http://localhost:3000
 REACT_APP_CLIENT_URL = http://localhost:3000
+REACT_APP_SERVER_URL = http://54.180.95.128:8081
